Add Rental database

--- a/ReolMarkedTeam7/appsettings.json
+++ b/ReolMarkedTeam7/appsettings.json
@@ -9,7 +9,7 @@
     ],
 
     "ConnectionStrings": {
-        "DefaultConnection": "Server=localhost;Database=Reolmarkedet;Trusted_Connection=True;TrustServerCertificate=True;"
+        "DefaultConnection": "Server=localhost;Database=Reolmarked;Trusted_Connection=True;TrustServerCertificate=True;"
     }
 }
 
